--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 .mat-mdc-form-field-subscript-wrapper
 {
     display:none  !important;
 }
+
+.mdc-notched-outline__trailing {
+    border-radius: 0px !important;
+  }
