--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <app-add-item (addEvent)="addToList($event)"></app-add-item>
 <div class="display">
   <mat-list >
-    <mat-list-item *ngFor="let item of items" id="list-item">
-        <span class="item"> {{ item.name }} </span>
+    <mat-list-item *ngFor="let item of items; index as i" id="list-item">
+        <span class="item">{{i+1}}.  {{ item.name }} </span>
+
+        <button id="check" mat-icon-button >
+          <mat-icon>check_circle</mat-icon>
+        </button>
+        
         <button id="delete" mat-icon-button (click)="remove(item.name)">
           <mat-icon matListItemIcon>delete</mat-icon>
         </button>
