--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mdc-notched-outline__trailing {
     border-radius: 0px !important;
   }
+  .mdc-list-item__primary-text {
+    color: #100f0f !important;
+}
