Added Logic for strike off and added title

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar id="toolBar">
+    <h1>Grocery List Manager</h1>
     <form>
         <mat-form-field id="formField" appearance="outline">
             <mat-label>Enter Item Name..</mat-label>
