--- a/src/app/add-item/add-item.component.css
+++ b/src/app/add-item/add-item.component.css
@@ -1,3 +1,9 @@
+h1{
+    font-size: 25px;
+    font-family: sans-serif;
+    margin-left: 20px;
+    margin-right: 0px;
+}
 form{
     text-align: center;
     margin:5px auto;
@@ -11,7 +17,7 @@ form{
     width: 450px;
     padding:20px;
     height:50px;
-
+    margin-left:  -267px;
 }
 
 .addButton{
